이메일 발송 로고 추가 및 정보수정 구현